<resources>
    <string name="app_name">Interest Calculator</string>
    <string name="investment">Initial Investment</string>
    <string name="payment">Regular Payment</string>
    <string name="interest">Annual Interest Rate</string>
    <string name="years">Years to Grow</string>
    <string name="calculate">CALCULATE</string>
    <string name="period">%d yrs</string>
    <string name="result">Compound Interest: %1$s</string>

    <string-array name="frequency">
        <item>Yearly</item>
        <item>Semi-annually</item>
        <item>Quarterly</item>
        <item>Monthly</item>
    </string-array>
</resources>
