<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >


    <TextView
        android:id="@+id/investment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/investment"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/input_investment"
        android:inputType="numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/investment"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:layout_below="@+id/input_investment"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:id="@+id/layout_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payment"
        android:layout_centerHorizontal="true">
        <EditText
            android:id="@+id/input_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spinner_freq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/frequency"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/interest_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interest"
        android:layout_below="@+id/layout_payment"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/input_rate"
        android:inputType="numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/interest_rate"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/years"
        android:layout_below="@+id/input_rate"
        android:layout_centerHorizontal="true"
        />
    <LinearLayout
        android:id="@+id/layout_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time"
        android:layout_centerHorizontal="true"
        >
        <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="time to show" />


    </LinearLayout>


    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_time"
        android:layout_centerHorizontal="true"
        android:text="@string/calculate"/>
</RelativeLayout>